--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="welcome_text">La música que te gusta donde sea</string>
     <string name="welcome_text_footer">Se parte del proyecto en mejorando.la/sfotipy</string>
+    <string name="title_activity_my_music">MyMusic</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
